ifds/src/tests/ir/snapshots/ide__tests__ir__wat__test_br_if.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 0) (define %0) {
BLOCK 0
%0 = 1
IF %0 THEN GOTO 1
RETURN ;
};

