ifds/src/tests/ir/snapshots/ide__tests__ir__wat__test_global_get.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0) {
BLOCK 0
%0 = %-1
RETURN %0;
};
define 1 (result 1) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0) {
BLOCK 1
%0 = %-4
RETURN %0;
};
define 2 (result 1) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0) {
BLOCK 2
%0 = %-5
RETURN %0;
};
define 3 (result 1) (define %-8 %-7 %-6 %-5 %-4 %-3 %-2 %-1 %0) {
BLOCK 3
%0 = %-8
RETURN %0;
};

