ifds/src/tests/ir/snapshots/ide__tests__ir__wat__test_simple_block.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %0) {
BLOCK 0
BLOCK 1
%0 = 1
GOTO 2
BLOCK 2
RETURN %0;
};

