ifds/src/tests/ir/snapshots/ide__tests__ir__wat__test_simple_loop.snap
---
source: src/tests/ir/wat.rs
expression: "format!(\"{}\", ir . buffer())"

---
define 0 (result 1) (define %0) {
BLOCK 0
BLOCK 1
BLOCK 3
%0 = 1
GOTO 2
GOTO 4 
BLOCK 4
GOTO 2
BLOCK 2
RETURN %0;
};

